added one_image tot he docs

--- a/genindex.html
+++ b/genindex.html
@@ -953,6 +953,10 @@
   </dl></td>
   <td style="width: 33%" valign="top"><dl>
       
+  <dt><a href="library/datasets.html#pyl2extra.datasets.images.one_image">one_image() (in module pyl2extra.datasets.images)</a>
+  </dt>
+
+      
   <dt><a href="library/gui.html#pyl2extra.gui.debugger.signal_handler.OnlineDebugger">OnlineDebugger (class in pyl2extra.gui.debugger.signal_handler)</a>
   </dt>
 
